# bombing

./: README.md  dune-project  guandan.opam
client/: index.html  vite.config.ts
client/src/: Animated.elm  Card.elm  Game.elm  Main.elm  Transform.elm  Tween.elm  WebSocket.elm  main.ts
client/src/Pages/: Playing.elm
lib/: dune  game.ml  player.ml  score.ml  types.ml
server/lib/: game.ml  player.ml  score.ml
server/test/: test_player.ml
test/: dune  test_player.ml  test_score.ml  test_types.ml
