(lang dune 3.20)

(name guandan)

(generate_opam_files true)

(source
 (github IntGrah/guandan))

(authors "Jeremy Chen <git@sl.intgrah.com>")

(license LICENSE)

(package
 (name guandan)
 (synopsis "Guandan")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
